Thu Jun 26 18:13:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Protocol icons are now shown in the buddy list.

Thu Jun 26 17:32:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - We no longer show the branches in buddy groups. Unfortunately, the
	    top level still shows them. Not sure what to do there.

Thu Jun 26 17:14:27 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - Changed the connect button and added a disconnect button.

Thu Jun 26 16:51:14 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - Accounts are now sorted as they would be in the config file. That
	    is, unless you have a 7 digit number of accounts, in which case
	    any past account #999999 would be out of order.